--- a/THE_WAR/style.css
+++ b/THE_WAR/style.css
@@ -244,5 +244,26 @@ font-size: 20px;
 
 
 
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #BDC4C4 ;
+  min-width: 160px;
+  box-shadow: 0px 4px 8px 0px rgba(193, 187, 187 ,0.2);
+  z-index: 1;
+}
 
+.dropdown-content a {
+  color: black;
+  padding: 5px 4px;
+  text-decoration: none;
+  display: block;
+  font-size: 12px;
+}
+
+.dropdown-content a:hover {background-color: rgba(217, 219, 219,0.6); ;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #BDBFB9 ;}
 
